objects/Agency_Renewal__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_certified_standards_Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_owns_the_standards_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_uses_certified_standards_owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C1_Standards_used_by_my_Agency_Agents__c</fullName>
        <description>Business_owns_the_standards_Agency</description>
        <formula>Business_owns_the_standards_Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C1: ownsStandards used - Agency/Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C2_Standards_owned_by_county_weights_an__c</fullName>
        <description>Business_uses_certified_standards_owned__c</description>
        <formula>Business_uses_certified_standards_owned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C2: Uses_certified_standards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Form_Status__c</fullName>
        <label>Current Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Form A Completed</fullName>
                </value>
                <value>
                    <fullName>Form B Completed</fullName>
                </value>
                <value>
                    <fullName>Form C Completed</fullName>
                </value>
                <value>
                    <fullName>Form D Completed</fullName>
                </value>
                <value>
                    <fullName>Form E Completed</fullName>
                </value>
                <value>
                    <fullName>Form F Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agency_Renewals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Request_Name__c</fullName>
        <description>Renewal Request Name</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lb1__c</fullName>
        <formula>$Label.chklbl1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lb1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lb2__c</fullName>
        <formula>$Label.lb2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lb2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lb3__c</fullName>
        <formula>$Label.lb3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lb3</label>
        <type>Text</type>
    </fields>
    <label>Agency Declaration</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Agency Declaration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>